syntax = "proto3";
package anytype;
option go_package = "pb";

import "models.proto";

// -------- Middle
message Event {
    oneof message {
        AccountAdd accountAdd = 1;
        BlockCreate blockCreate = 102;
        BlockUpdate blockUpdate = 103;
        BlockRemove blockRemove = 104;
    }
}

message AccountAdd {
    int64 index = 1;
    Account account = 2;
}

message BlockCreate {
    string id = 1;
    string docId = 2;
    uint32 pos = 3;
}

message BlockUpdate {
    string id = 1;
    string docId = 2;
    // ... update info
}

message BlockRemove {
    string id = 1;
    string docId = 2;
}
